--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
             <div class="fundoValores">
                 <div class="boxValores">
                     <div class="tituloBox">Mês Atual</div>
-                    <div class="valores">Tinha .............................................. R$ 0,00</div>
-                    <div class="valores">Gastei ............................................. R$ 0,00</div>
-                    <div class="valores">Ganhei ............................................ R$ 0,00</div>          
+                    <div class="linha"><div class="indiceValores">Mês Anterior</div><div class="valoresMesAnterior">R$ 0,00</div></div>
+                    <div class="linha"><div class="indiceValores">Gastei</div><div class="valoresGastei">R$ 0,00</div></div>
+                    <div class="linha"><div class="indiceValores">Ganhei</div><div class="valoresGanhei">R$ 0,00</div></div>          
                 </div>
             </div>
 
             <div class="fundoValores">
                 <div class="boxValores">
                     <div class="tituloBox">Contas</div>
-                    <div class="valores">Dinheiro ........................................ R$ 0,00</div>
-                    <div class="valores">Poupança ...................................... R$ 0,00</div>
-                    <div class="valores">Conta ............................................. R$ 0,00</div>          
+                    <div class="linha"><div class="indiceValores">Dinheiro</div><div class="valoresContas">R$ 0,00</div></div>
+                    <div class="linha"><div class="indiceValores">Poupança</div><div class="valoresContas">R$ 0,00</div></div>
+                    <div class="linha"><div class="indiceValores">Conta Corrente</div><div class="valoresContas">R$ 0,00</div></div>          
                 </div>
             </div>
 
             <div class="fundoBotao">
-                <button>+</button>
+                <button id="addButton">+</button>
             </div>
             
 
         </main>
-        <script src="formatacao.js"></script>
+        <script src="funcoes.js"></script>
     </body>
 </html>
 
